tests/cases/parser/literals/multi_code_point_char_literal.stderr
error: character literals may only contain one codepoint
 --> $DIR/multi_code_point_char_literal.hash:3:6
2 |   
3 |   k := 'ab';
  |        ^^^^ here
  = help: if you meant to write a string literal, use `"` instead
